Rendu 4/_build/parser.output
   0  $accept : %entry% $end

   1  main : expr EOL

   2  variable : VARIABLE

   3  sexpr : variable
   4        | CONST
   5        | LPAREN expr RPAREN
   6        | UNIT

   7  expr : IF expr THEN expr ELSE expr
   8       | BEGIN expr END
   9       | PRINT expr
  10       | PRSTR
  11       | PRNL
  12       | UNIT
  13       | LET variable EGALE expr IN expr
  14       | LPAREN expr RPAREN
  15       | LET UNDERSCORE EGALE expr IN expr
  16       | expr EINSTR expr
  17       | LET variable UNIT EGALE expr IN expr
  18       | LET variable fun_arg IN expr
  19       | LET REC variable fun_arg IN expr
  20       | fun_def
  21       | TRY expr WITH EXCEPT variable IMPLIES expr
  22       | RAISE EXCEPT sexpr
  23       | LET variable EGALE REF expr IN expr
  24       | ACCESS variable
  25       | variable AFFECT expr
  26       | AMAKE sexpr
  27       | TAFFECT expr RPAREN LARROW expr
  28       | TAFFECT expr RPAREN
  29       | expr ADD expr
  30       | expr MINUS expr
  31       | MINUS expr
  32       | expr MULT expr
  33       | expr DIV expr
  34       | expr MOD expr
  35       | VARIABLE
  36       | CONST
  37       | expr AND expr
  38       | expr OR expr
  39       | NOT expr
  40       | expr EGALE expr
  41       | expr NEG expr
  42       | expr SUPS expr
  43       | expr INFS expr
  44       | expr SUPE expr
  45       | expr INFE expr
  46       | funct_call

  47  fun_arg : variable fun_arg
  48          | variable EGALE expr

  49  fun_arg2 : variable fun_arg2
  50           | variable IMPLIES expr

  51  fun_def : FUN fun_arg2

  52  funct_call : funct_call sexpr
  53             | sexpr sexpr

  54  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (54)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	main  goto 21
	expr  goto 22
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	sexpr : CONST .  (4)
	expr : CONST .  (36)

	CONST  reduce 4
	VARIABLE  reduce 4
	ADD  reduce 36
	MINUS  reduce 36
	MULT  reduce 36
	DIV  reduce 36
	MOD  reduce 36
	AND  reduce 36
	OR  reduce 36
	EGALE  reduce 36
	NEG  reduce 36
	SUPS  reduce 36
	INFS  reduce 36
	SUPE  reduce 36
	INFE  reduce 36
	IN  reduce 36
	THEN  reduce 36
	ELSE  reduce 36
	END  reduce 36
	LPAREN  reduce 4
	RPAREN  reduce 36
	UNIT  reduce 4
	EOL  reduce 36
	EINSTR  reduce 36
	WITH  reduce 36


state 4
	variable : VARIABLE .  (2)
	expr : VARIABLE .  (35)

	CONST  reduce 2
	VARIABLE  reduce 2
	ADD  reduce 35
	MINUS  reduce 35
	MULT  reduce 35
	DIV  reduce 35
	MOD  reduce 35
	AND  reduce 35
	OR  reduce 35
	EGALE  reduce 35
	NEG  reduce 35
	SUPS  reduce 35
	INFS  reduce 35
	SUPE  reduce 35
	INFE  reduce 35
	IN  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	END  reduce 35
	LPAREN  reduce 2
	RPAREN  reduce 35
	UNIT  reduce 2
	EOL  reduce 35
	EINSTR  reduce 35
	WITH  reduce 35
	AFFECT  reduce 2


state 5
	expr : TAFFECT . expr RPAREN LARROW expr  (27)
	expr : TAFFECT . expr RPAREN  (28)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 27
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 6
	expr : MINUS . expr  (31)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 28
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 7
	expr : NOT . expr  (39)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 29
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 8
	expr : PRINT . expr  (9)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 30
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 9
	expr : LET . variable EGALE expr IN expr  (13)
	expr : LET . UNDERSCORE EGALE expr IN expr  (15)
	expr : LET . variable UNIT EGALE expr IN expr  (17)
	expr : LET . variable fun_arg IN expr  (18)
	expr : LET . REC variable fun_arg IN expr  (19)
	expr : LET . variable EGALE REF expr IN expr  (23)

	VARIABLE  shift 31
	REC  shift 32
	UNDERSCORE  shift 33
	.  error

	variable  goto 34


state 10
	expr : IF . expr THEN expr ELSE expr  (7)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 35
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 11
	expr : BEGIN . expr END  (8)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 36
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 12
	fun_def : FUN . fun_arg2  (51)

	VARIABLE  shift 31
	.  error

	variable  goto 37
	fun_arg2  goto 38


state 13
	sexpr : LPAREN . expr RPAREN  (5)
	expr : LPAREN . expr RPAREN  (14)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 39
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 14
	sexpr : UNIT .  (6)
	expr : UNIT .  (12)

	CONST  reduce 6
	VARIABLE  reduce 6
	ADD  reduce 12
	MINUS  reduce 12
	MULT  reduce 12
	DIV  reduce 12
	MOD  reduce 12
	AND  reduce 12
	OR  reduce 12
	EGALE  reduce 12
	NEG  reduce 12
	SUPS  reduce 12
	INFS  reduce 12
	SUPE  reduce 12
	INFE  reduce 12
	IN  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	END  reduce 12
	LPAREN  reduce 6
	RPAREN  reduce 12
	UNIT  reduce 6
	EOL  reduce 12
	EINSTR  reduce 12
	WITH  reduce 12


state 15
	expr : TRY . expr WITH EXCEPT variable IMPLIES expr  (21)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 40
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 16
	expr : RAISE . EXCEPT sexpr  (22)

	EXCEPT  shift 41
	.  error


state 17
	expr : ACCESS . variable  (24)

	VARIABLE  shift 31
	.  error

	variable  goto 42


state 18
	expr : PRSTR .  (10)

	.  reduce 10


state 19
	expr : PRNL .  (11)

	.  reduce 11


state 20
	expr : AMAKE . sexpr  (26)

	CONST  shift 43
	VARIABLE  shift 31
	LPAREN  shift 44
	UNIT  shift 45
	.  error

	variable  goto 46
	sexpr  goto 47


state 21
	%entry% : '\001' main .  (54)

	.  reduce 54


state 22
	main : expr . EOL  (1)
	expr : expr . EINSTR expr  (16)
	expr : expr . ADD expr  (29)
	expr : expr . MINUS expr  (30)
	expr : expr . MULT expr  (32)
	expr : expr . DIV expr  (33)
	expr : expr . MOD expr  (34)
	expr : expr . AND expr  (37)
	expr : expr . OR expr  (38)
	expr : expr . EGALE expr  (40)
	expr : expr . NEG expr  (41)
	expr : expr . SUPS expr  (42)
	expr : expr . INFS expr  (43)
	expr : expr . SUPE expr  (44)
	expr : expr . INFE expr  (45)

	ADD  shift 48
	MINUS  shift 49
	MULT  shift 50
	DIV  shift 51
	MOD  shift 52
	AND  shift 53
	OR  shift 54
	EGALE  shift 55
	NEG  shift 56
	SUPS  shift 57
	INFS  shift 58
	SUPE  shift 59
	INFE  shift 60
	EOL  shift 61
	EINSTR  shift 62
	.  error


state 23
	sexpr : variable .  (3)
	expr : variable . AFFECT expr  (25)

	AFFECT  shift 63
	CONST  reduce 3
	VARIABLE  reduce 3
	LPAREN  reduce 3
	UNIT  reduce 3


state 24
	funct_call : sexpr . sexpr  (53)

	CONST  shift 43
	VARIABLE  shift 31
	LPAREN  shift 44
	UNIT  shift 45
	.  error

	variable  goto 46
	sexpr  goto 64


state 25
	expr : fun_def .  (20)

	.  reduce 20


state 26
	expr : funct_call .  (46)
	funct_call : funct_call . sexpr  (52)

	CONST  shift 43
	VARIABLE  shift 31
	LPAREN  shift 44
	UNIT  shift 45
	ADD  reduce 46
	MINUS  reduce 46
	MULT  reduce 46
	DIV  reduce 46
	MOD  reduce 46
	AND  reduce 46
	OR  reduce 46
	EGALE  reduce 46
	NEG  reduce 46
	SUPS  reduce 46
	INFS  reduce 46
	SUPE  reduce 46
	INFE  reduce 46
	IN  reduce 46
	THEN  reduce 46
	ELSE  reduce 46
	END  reduce 46
	RPAREN  reduce 46
	EOL  reduce 46
	EINSTR  reduce 46
	WITH  reduce 46

	variable  goto 46
	sexpr  goto 65


state 27
	expr : expr . EINSTR expr  (16)
	expr : TAFFECT expr . RPAREN LARROW expr  (27)
	expr : TAFFECT expr . RPAREN  (28)
	expr : expr . ADD expr  (29)
	expr : expr . MINUS expr  (30)
	expr : expr . MULT expr  (32)
	expr : expr . DIV expr  (33)
	expr : expr . MOD expr  (34)
	expr : expr . AND expr  (37)
	expr : expr . OR expr  (38)
	expr : expr . EGALE expr  (40)
	expr : expr . NEG expr  (41)
	expr : expr . SUPS expr  (42)
	expr : expr . INFS expr  (43)
	expr : expr . SUPE expr  (44)
	expr : expr . INFE expr  (45)

	ADD  shift 48
	MINUS  shift 49
	MULT  shift 50
	DIV  shift 51
	MOD  shift 52
	AND  shift 53
	OR  shift 54
	EGALE  shift 55
	NEG  shift 56
	SUPS  shift 57
	INFS  shift 58
	SUPE  shift 59
	INFE  shift 60
	RPAREN  shift 66
	EINSTR  shift 62
	.  error


state 28
	expr : expr . EINSTR expr  (16)
	expr : expr . ADD expr  (29)
	expr : expr . MINUS expr  (30)
	expr : MINUS expr .  (31)
	expr : expr . MULT expr  (32)
	expr : expr . DIV expr  (33)
	expr : expr . MOD expr  (34)
	expr : expr . AND expr  (37)
	expr : expr . OR expr  (38)
	expr : expr . EGALE expr  (40)
	expr : expr . NEG expr  (41)
	expr : expr . SUPS expr  (42)
	expr : expr . INFS expr  (43)
	expr : expr . SUPE expr  (44)
	expr : expr . INFE expr  (45)

	MULT  shift 50
	DIV  shift 51
	MOD  shift 52
	AND  shift 53
	OR  shift 54
	NEG  shift 56
	SUPS  shift 57
	INFS  shift 58
	SUPE  shift 59
	INFE  shift 60
	ADD  reduce 31
	MINUS  reduce 31
	EGALE  reduce 31
	IN  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	END  reduce 31
	RPAREN  reduce 31
	EOL  reduce 31
	EINSTR  reduce 31
	WITH  reduce 31


state 29
	expr : expr . EINSTR expr  (16)
	expr : expr . ADD expr  (29)
	expr : expr . MINUS expr  (30)
	expr : expr . MULT expr  (32)
	expr : expr . DIV expr  (33)
	expr : expr . MOD expr  (34)
	expr : expr . AND expr  (37)
	expr : expr . OR expr  (38)
	expr : NOT expr .  (39)
	expr : expr . EGALE expr  (40)
	expr : expr . NEG expr  (41)
	expr : expr . SUPS expr  (42)
	expr : expr . INFS expr  (43)
	expr : expr . SUPE expr  (44)
	expr : expr . INFE expr  (45)

	MULT  shift 50
	DIV  shift 51
	MOD  shift 52
	NEG  shift 56
	SUPS  shift 57
	INFS  shift 58
	SUPE  shift 59
	INFE  shift 60
	ADD  reduce 39
	MINUS  reduce 39
	AND  reduce 39
	OR  reduce 39
	EGALE  reduce 39
	IN  reduce 39
	THEN  reduce 39
	ELSE  reduce 39
	END  reduce 39
	RPAREN  reduce 39
	EOL  reduce 39
	EINSTR  reduce 39
	WITH  reduce 39


state 30
	expr : PRINT expr .  (9)
	expr : expr . EINSTR expr  (16)
	expr : expr . ADD expr  (29)
	expr : expr . MINUS expr  (30)
	expr : expr . MULT expr  (32)
	expr : expr . DIV expr  (33)
	expr : expr . MOD expr  (34)
	expr : expr . AND expr  (37)
	expr : expr . OR expr  (38)
	expr : expr . EGALE expr  (40)
	expr : expr . NEG expr  (41)
	expr : expr . SUPS expr  (42)
	expr : expr . INFS expr  (43)
	expr : expr . SUPE expr  (44)
	expr : expr . INFE expr  (45)

	ADD  shift 48
	MINUS  shift 49
	MULT  shift 50
	DIV  shift 51
	MOD  shift 52
	AND  shift 53
	OR  shift 54
	EGALE  shift 55
	NEG  shift 56
	SUPS  shift 57
	INFS  shift 58
	SUPE  shift 59
	INFE  shift 60
	IN  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	END  reduce 9
	RPAREN  reduce 9
	EOL  reduce 9
	EINSTR  reduce 9
	WITH  reduce 9


state 31
	variable : VARIABLE .  (2)

	.  reduce 2


state 32
	expr : LET REC . variable fun_arg IN expr  (19)

	VARIABLE  shift 31
	.  error

	variable  goto 67


state 33
	expr : LET UNDERSCORE . EGALE expr IN expr  (15)

	EGALE  shift 68
	.  error


state 34
	expr : LET variable . EGALE expr IN expr  (13)
	expr : LET variable . UNIT EGALE expr IN expr  (17)
	expr : LET variable . fun_arg IN expr  (18)
	expr : LET variable . EGALE REF expr IN expr  (23)

	VARIABLE  shift 31
	EGALE  shift 69
	UNIT  shift 70
	.  error

	variable  goto 71
	fun_arg  goto 72


state 35
	expr : IF expr . THEN expr ELSE expr  (7)
	expr : expr . EINSTR expr  (16)
	expr : expr . ADD expr  (29)
	expr : expr . MINUS expr  (30)
	expr : expr . MULT expr  (32)
	expr : expr . DIV expr  (33)
	expr : expr . MOD expr  (34)
	expr : expr . AND expr  (37)
	expr : expr . OR expr  (38)
	expr : expr . EGALE expr  (40)
	expr : expr . NEG expr  (41)
	expr : expr . SUPS expr  (42)
	expr : expr . INFS expr  (43)
	expr : expr . SUPE expr  (44)
	expr : expr . INFE expr  (45)

	ADD  shift 48
	MINUS  shift 49
	MULT  shift 50
	DIV  shift 51
	MOD  shift 52
	AND  shift 53
	OR  shift 54
	EGALE  shift 55
	NEG  shift 56
	SUPS  shift 57
	INFS  shift 58
	SUPE  shift 59
	INFE  shift 60
	THEN  shift 73
	EINSTR  shift 62
	.  error


state 36
	expr : BEGIN expr . END  (8)
	expr : expr . EINSTR expr  (16)
	expr : expr . ADD expr  (29)
	expr : expr . MINUS expr  (30)
	expr : expr . MULT expr  (32)
	expr : expr . DIV expr  (33)
	expr : expr . MOD expr  (34)
	expr : expr . AND expr  (37)
	expr : expr . OR expr  (38)
	expr : expr . EGALE expr  (40)
	expr : expr . NEG expr  (41)
	expr : expr . SUPS expr  (42)
	expr : expr . INFS expr  (43)
	expr : expr . SUPE expr  (44)
	expr : expr . INFE expr  (45)

	ADD  shift 48
	MINUS  shift 49
	MULT  shift 50
	DIV  shift 51
	MOD  shift 52
	AND  shift 53
	OR  shift 54
	EGALE  shift 55
	NEG  shift 56
	SUPS  shift 57
	INFS  shift 58
	SUPE  shift 59
	INFE  shift 60
	END  shift 74
	EINSTR  shift 62
	.  error


state 37
	fun_arg2 : variable . fun_arg2  (49)
	fun_arg2 : variable . IMPLIES expr  (50)

	VARIABLE  shift 31
	IMPLIES  shift 75
	.  error

	variable  goto 37
	fun_arg2  goto 76


state 38
	fun_def : FUN fun_arg2 .  (51)

	.  reduce 51


state 39
	sexpr : LPAREN expr . RPAREN  (5)
	expr : LPAREN expr . RPAREN  (14)
	expr : expr . EINSTR expr  (16)
	expr : expr . ADD expr  (29)
	expr : expr . MINUS expr  (30)
	expr : expr . MULT expr  (32)
	expr : expr . DIV expr  (33)
	expr : expr . MOD expr  (34)
	expr : expr . AND expr  (37)
	expr : expr . OR expr  (38)
	expr : expr . EGALE expr  (40)
	expr : expr . NEG expr  (41)
	expr : expr . SUPS expr  (42)
	expr : expr . INFS expr  (43)
	expr : expr . SUPE expr  (44)
	expr : expr . INFE expr  (45)

	ADD  shift 48
	MINUS  shift 49
	MULT  shift 50
	DIV  shift 51
	MOD  shift 52
	AND  shift 53
	OR  shift 54
	EGALE  shift 55
	NEG  shift 56
	SUPS  shift 57
	INFS  shift 58
	SUPE  shift 59
	INFE  shift 60
	RPAREN  shift 77
	EINSTR  shift 62
	.  error


state 40
	expr : expr . EINSTR expr  (16)
	expr : TRY expr . WITH EXCEPT variable IMPLIES expr  (21)
	expr : expr . ADD expr  (29)
	expr : expr . MINUS expr  (30)
	expr : expr . MULT expr  (32)
	expr : expr . DIV expr  (33)
	expr : expr . MOD expr  (34)
	expr : expr . AND expr  (37)
	expr : expr . OR expr  (38)
	expr : expr . EGALE expr  (40)
	expr : expr . NEG expr  (41)
	expr : expr . SUPS expr  (42)
	expr : expr . INFS expr  (43)
	expr : expr . SUPE expr  (44)
	expr : expr . INFE expr  (45)

	ADD  shift 48
	MINUS  shift 49
	MULT  shift 50
	DIV  shift 51
	MOD  shift 52
	AND  shift 53
	OR  shift 54
	EGALE  shift 55
	NEG  shift 56
	SUPS  shift 57
	INFS  shift 58
	SUPE  shift 59
	INFE  shift 60
	EINSTR  shift 62
	WITH  shift 78
	.  error


state 41
	expr : RAISE EXCEPT . sexpr  (22)

	CONST  shift 43
	VARIABLE  shift 31
	LPAREN  shift 44
	UNIT  shift 45
	.  error

	variable  goto 46
	sexpr  goto 79


state 42
	expr : ACCESS variable .  (24)

	.  reduce 24


state 43
	sexpr : CONST .  (4)

	.  reduce 4


state 44
	sexpr : LPAREN . expr RPAREN  (5)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 80
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 45
	sexpr : UNIT .  (6)

	.  reduce 6


state 46
	sexpr : variable .  (3)

	.  reduce 3


state 47
	expr : AMAKE sexpr .  (26)

	.  reduce 26


state 48
	expr : expr ADD . expr  (29)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 81
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 49
	expr : expr MINUS . expr  (30)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 82
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 50
	expr : expr MULT . expr  (32)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 83
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 51
	expr : expr DIV . expr  (33)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 84
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 52
	expr : expr MOD . expr  (34)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 85
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 53
	expr : expr AND . expr  (37)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 86
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 54
	expr : expr OR . expr  (38)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 87
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 55
	expr : expr EGALE . expr  (40)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 88
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 56
	expr : expr NEG . expr  (41)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 89
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 57
	expr : expr SUPS . expr  (42)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 90
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 58
	expr : expr INFS . expr  (43)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 91
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 59
	expr : expr SUPE . expr  (44)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 92
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 60
	expr : expr INFE . expr  (45)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 93
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 61
	main : expr EOL .  (1)

	.  reduce 1


state 62
	expr : expr EINSTR . expr  (16)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 94
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26


state 63
	expr : variable AFFECT . expr  (25)

	CONST  shift 3
	VARIABLE  shift 4
	TAFFECT  shift 5
	MINUS  shift 6
	NOT  shift 7
	PRINT  shift 8
	LET  shift 9
	IF  shift 10
	BEGIN  shift 11
	FUN  shift 12
	LPAREN  shift 13
	UNIT  shift 14
	TRY  shift 15
	RAISE  shift 16
	ACCESS  shift 17
	PRSTR  shift 18
	PRNL  shift 19
	AMAKE  shift 20
	.  error

	expr  goto 95
	variable  goto 23
	sexpr  goto 24
	fun_def  goto 25
	funct_call  goto 26

